User-interface added to the game

--- a/index.html
+++ b/index.html
@@ -3,14 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>RPS</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
+    <div class="heading"><h1>Let's Do Rock-paper-scissor</h1></div>
     <div class="game">
-        <h1>Let's Do Rock-paper-scissor</h1>
+        <div><button id="rock">✊</button></div>
+        <div><button id="paper">✋</button></div>
+        <div><button id="scissor">✌</button></div>
         
     </div>
+    <div id="displayScore"></div>
+    <div id="reload"></div>
+
+    
 </body>
 </html>
